hw06_order/deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: metrics
      port: 8090
      targetPort: 8090
